src/objects/Integration_Event__e.object
<CustomObject>
    <description>Notify change in records for integration</description>
    <fields>
        <fullName>Event_Object__c</fullName>
        <label>Event Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_ID__c</fullName>
        <label>Record ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Integration Event</label>
    <pluralLabel>Integration Events</pluralLabel>
</CustomObject>